--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body class="body">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg fixed-top">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="images/logo_elmapet.png" width="65" height="65" alt="logo">
@@ -83,7 +83,7 @@
     <section id="servizi">
       <div class="container mt-4 pt-5">
         <h1 class="text-center titolo">I nostri servizi</h1>
-        <div class="row row-cols-1 row-cols-md-3 g-4 mt-4">
+        <div class="row row-cols-1 row-cols-md-3 g-4 mt-4 text-center">
           <div class="col">
             <div class="card card-teaser border-0">
               <div class="card-body icone-servizi">
@@ -135,7 +135,7 @@
     <!--Carosello-->
     <section id="cucce">
       <div class="container mt-4 pt-3">
-        <h1 class="text-center titolo">Le nostre cucce</h1>
+        <h1 class="text-center ">Le nostre cucce</h1>
         <div id="carouselCaptions" class="carousel slide">
           <div class="carousel-inner">
             <div class="carousel-item active">
