--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero_text">
                     <h2 class="hero_title titolo">ElmaPet</h2>
-                    <p class="hero_sub">Costruiamo cucce per voi</p>
+                    <p class="hero_sub">Cucce per cani e gatti <br> Made in Italy</p>
                 </div>
             </div>
         </div>
@@ -65,11 +65,15 @@
       <div class="container mt-4 pt-5">
           <h1 class="text-center titolo">Informazioni</h1>
           <div class="row mt-4">
-              <div class="col-lg-6 text-center offset-lg-3">
+              <div class="col-lg-6 text-center offset-lg-3 mb-2">
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit doloremque eum laborum distinctio nemo pariatur nulla odit. Quis voluptatum harum quisquam fugiat dicta fuga animi natus iusto, labore molestiae officiis?
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, totam ab obcaecati voluptas illum illo non impedit labore dolorum molestias corporis enim quisquam inventore deserunt molestiae aliquam mollitia tenetur asperiores. </p>
                   <!--Social-->
-                  <h4 class="titolo">Dai un'occhiata ai nostri social</h4>
+                  <div>
+                    <img class="foto-info" src="images/soc2.jpg" alt="">
+                    <img class="foto-info ms-4" src="images/soc.jpg" alt="">
+                  </div>
+                  <h1 class="titolo mt-4">Dai un'occhiata ai nostri social</h1>
                   <div class="social-icons mt-4">
                       <a href="https://www.facebook.com/Elmapet14" target="_blank"><i class="fab fa-facebook"></i></a>
                       <a href="https://www.instagram.com/elmapet1/" target="_blank"><i class="fab fa-instagram"></i></a>
@@ -135,7 +139,81 @@
     <!--Carosello-->
     <section id="cucce">
       <div class="container mt-4 pt-3">
-        <h1 class="text-center ">Le nostre cucce</h1>
+        <h1 class="text-center titolo ">Le nostre cucce</h1>
+        <p class="text-center col-lg-6 offset-lg-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error vel cupiditate, mollitia in enim minima minus sunt obcaecati. Ullam adipisci neque quos nostrum qui nemo labore. Suscipit ab minima odit?</p>
+        <h2 class="text-center titolo pt-5 pb-2">Cucce con bordo</h2>
+        <div id="carouselCaptions" class="carousel slide">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="images/408898007_269913582743885_8602007719986511293_n.jpg" class="d-block immagineCarosello " alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>First slide label</h5>
+                <p>Some representative placeholder content for the first slide.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="images/HERO_Pix4Dcloud_2023.jpg" class="d-block immagineCarosello" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Second slide label</h5>
+                <p>Some representative placeholder content for the second slide.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="images/218-4752x3168.jpg" class="d-block immagineCarosello" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Third slide label</h5>
+                <p>Some representative placeholder content for the third slide.</p>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+
+        <hr>
+        <h2 class="text-center titolo pt-5 pb-2">Cuscini rettangolari</h2>
+        <div id="carouselCaptions" class="carousel slide">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="images/408898007_269913582743885_8602007719986511293_n.jpg" class="d-block immagineCarosello " alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>First slide label</h5>
+                <p>Some representative placeholder content for the first slide.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="images/HERO_Pix4Dcloud_2023.jpg" class="d-block immagineCarosello" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Second slide label</h5>
+                <p>Some representative placeholder content for the second slide.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="images/218-4752x3168.jpg" class="d-block immagineCarosello" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Third slide label</h5>
+                <p>Some representative placeholder content for the third slide.</p>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+
+        <hr>
+        <h2 class="text-center titolo pt-5 pb-2">Cuscini ovali</h2>
         <div id="carouselCaptions" class="carousel slide">
           <div class="carousel-inner">
             <div class="carousel-item active">
