--- a/index.html
+++ b/index.html
@@ -69,9 +69,31 @@
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit doloremque eum laborum distinctio nemo pariatur nulla odit. Quis voluptatum harum quisquam fugiat dicta fuga animi natus iusto, labore molestiae officiis?
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, totam ab obcaecati voluptas illum illo non impedit labore dolorum molestias corporis enim quisquam inventore deserunt molestiae aliquam mollitia tenetur asperiores. </p>
                   <!--Social-->
-                  <div>
-                    <img class="foto-info" src="images/soc2.jpg" alt="">
-                    <img class="foto-info ms-4" src="images/soc.jpg" alt="">
+                  <div class="row">
+                    <div class="col-12 col-lg-6">
+                  <!--grid item 1-->
+                      <div class="it-grid-item-wrapper">
+                        <a href="https://www.instagram.com/p/CzrJ-2NLkBY/">
+                          <div class="img-responsive-wrapper">
+                            <div class="img-responsive">
+                              <div class="img-wrapper"><img class="foto-info" src="images/soc.jpg" alt="image Alt" title="Image Title"></div>
+                            </div>
+                          </div>
+                        </a>
+                      </div>
+                    </div>
+                  <!--grid item 2-->
+                    <div class="col-12 col-lg-6">
+                      <div class="it-grid-item-wrapper">
+                        <a href="https://www.instagram.com/p/C1Zcp5XqpLV/">
+                          <div class="img-responsive-wrapper">
+                            <div class="img-responsive">
+                              <div class="img-wrapper"><img class="foto-info" src="images/soc2.jpg" alt="image Alt" title="Image Title"></div>
+                            </div>
+                          </div>
+                        </a>
+                      </div>
+                    </div>
                   </div>
                   <h1 class="titolo mt-4">Dai un'occhiata ai nostri social</h1>
                   <div class="social-icons mt-4">
@@ -138,115 +160,135 @@
     </section>
     <!--Carosello-->
     <section id="cucce">
-      <div class="container mt-4 pt-3">
+      <div class="row">
+        <div class="col-lg-8 offset-lg-2">
         <h1 class="text-center titolo ">Le nostre cucce</h1>
-        <p class="text-center col-lg-6 offset-lg-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error vel cupiditate, mollitia in enim minima minus sunt obcaecati. Ullam adipisci neque quos nostrum qui nemo labore. Suscipit ab minima odit?</p>
+        <p class="text-center col-lg-6 offset-lg-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam reprehenderit similique voluptatem consequatur culpa quis vitae nobis perspiciatis eaque ducimus id modi est, molestiae enim dolores autem in quam ad!</p>
+        <!--Primo Carosello-->
         <h2 class="text-center titolo pt-5 pb-2">Cucce con bordo</h2>
-        <div id="carouselCaptions" class="carousel slide">
+        <div id="carouselExampleCaptions" class="carousel slide">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="images/408898007_269913582743885_8602007719986511293_n.jpg" class="d-block immagineCarosello " alt="...">
+              <img src="images/DSCF0002 (1).jpg" class="d-block w-100 h-50" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>First slide label</h5>
                 <p>Some representative placeholder content for the first slide.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="images/HERO_Pix4Dcloud_2023.jpg" class="d-block immagineCarosello" alt="...">
+              <img src="images/DSCF0002 (2).jpg" class="d-block w-100 h-50" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Second slide label</h5>
                 <p>Some representative placeholder content for the second slide.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="images/218-4752x3168.jpg" class="d-block immagineCarosello" alt="...">
+              <img src="images/DSCF0012.jpg" class="d-block w-100 h-50" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Third slide label</h5>
                 <p>Some representative placeholder content for the third slide.</p>
               </div>
             </div>
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselCaptions" data-bs-slide="prev">
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
           </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselCaptions" data-bs-slide="next">
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+        
+        <!--Secondo Carosello-->
+        <hr>
+        <h2 class="text-center titolo pt-5 pb-2">Cucce con bordo</h2>
+        <div id="carouselExampleCaptions" class="carousel slide">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="images/DSCF0002 (1).jpg" class="d-block w-100 h-50" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>First slide label</h5>
+                <p>Some representative placeholder content for the first slide.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="images/DSCF0002 (2).jpg" class="d-block w-100 h-50" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Second slide label</h5>
+                <p>Some representative placeholder content for the second slide.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="images/DSCF0012.jpg" class="d-block w-100 h-50" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Third slide label</h5>
+                <p>Some representative placeholder content for the third slide.</p>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
           </button>
         </div>
 
+        <!--Terzo Carosello-->
         <hr>
-        <h2 class="text-center titolo pt-5 pb-2">Cuscini rettangolari</h2>
-        <div id="carouselCaptions" class="carousel slide">
+        <h2 class="text-center titolo pt-5 pb-2">Cucce con bordo</h2>
+        <div id="carouselExampleCaptions" class="carousel slide">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="images/408898007_269913582743885_8602007719986511293_n.jpg" class="d-block immagineCarosello " alt="...">
+              <img src="images/DSCF0002 (1).jpg" class="d-block w-100 h-50" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>First slide label</h5>
                 <p>Some representative placeholder content for the first slide.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="images/HERO_Pix4Dcloud_2023.jpg" class="d-block immagineCarosello" alt="...">
+              <img src="images/DSCF0002 (2).jpg" class="d-block w-100 h-50" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Second slide label</h5>
                 <p>Some representative placeholder content for the second slide.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="images/218-4752x3168.jpg" class="d-block immagineCarosello" alt="...">
+              <img src="images/DSCF0012.jpg" class="d-block w-100 h-50" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Third slide label</h5>
                 <p>Some representative placeholder content for the third slide.</p>
               </div>
             </div>
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselCaptions" data-bs-slide="prev">
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
           </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselCaptions" data-bs-slide="next">
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-
-        <hr>
-        <h2 class="text-center titolo pt-5 pb-2">Cuscini ovali</h2>
-        <div id="carouselCaptions" class="carousel slide">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="images/408898007_269913582743885_8602007719986511293_n.jpg" class="d-block immagineCarosello " alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
-                <p>Some representative placeholder content for the first slide.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="images/HERO_Pix4Dcloud_2023.jpg" class="d-block immagineCarosello" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Some representative placeholder content for the second slide.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="images/218-4752x3168.jpg" class="d-block immagineCarosello" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Some representative placeholder content for the third slide.</p>
-              </div>
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselCaptions" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselCaptions" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
+      </div>
       </div>
     </section>
 </body>
