--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero_text">
-                    <h2 class="hero_title titolo">ElmaPet</h2>
+                    <h2 class="hero_title titolo">Elma Pet</h2>
                     <p class="hero_sub">Cucce per cani e gatti <br> Made in Italy</p>
                 </div>
             </div>
@@ -65,13 +65,13 @@
       <div class="container mt-4 pt-5">
           <h1 class="text-center titolo">Informazioni</h1>
           <div class="row mt-4">
-              <div class="col-lg-6 text-center offset-lg-3 mb-2">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit doloremque eum laborum distinctio nemo pariatur nulla odit. Quis voluptatum harum quisquam fugiat dicta fuga animi natus iusto, labore molestiae officiis?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, totam ab obcaecati voluptas illum illo non impedit labore dolorum molestias corporis enim quisquam inventore deserunt molestiae aliquam mollitia tenetur asperiores. </p>
-                  <!--Social-->
+              <div class="col-lg-6 text-center offset-lg-3 mb-4">
+                  <p class="mb-4">La morbidezza e la qualità Made In Italy incontrano il design e l’estetica con le cucce <b>Elma Pet</b>.
+                      Ogni dettaglio conta quando si tratta del comfort del tuo peloso: le nostre cucce su misura sono progettate con amore e precisione,  e realizzate dai nostri artigiani italiani con tessuti di prima scelta.
+                    <br> <br> Regala al tuo amico a quattro zampe la comodità che merita!  <!--Immagini Social-->
                   <div class="row">
                     <div class="col-12 col-lg-6">
-                  <!--grid item 1-->
+                  <!--Immagine 1-->
                       <div class="it-grid-item-wrapper">
                         <a href="https://www.instagram.com/p/CzrJ-2NLkBY/">
                           <div class="img-responsive-wrapper">
@@ -82,7 +82,7 @@
                         </a>
                       </div>
                     </div>
-                  <!--grid item 2-->
+                  <!--Immagine 2-->
                     <div class="col-12 col-lg-6">
                       <div class="it-grid-item-wrapper">
                         <a href="https://www.instagram.com/p/C1Zcp5XqpLV/">
@@ -95,6 +95,7 @@
                       </div>
                     </div>
                   </div>
+                  <!--Social-->
                   <h1 class="titolo mt-4">Dai un'occhiata ai nostri social</h1>
                   <div class="social-icons mt-4">
                       <a href="https://www.facebook.com/Elmapet14" target="_blank"><i class="fab fa-facebook"></i></a>
@@ -109,17 +110,18 @@
     <section id="servizi">
       <div class="container mt-4 pt-5">
         <h1 class="text-center titolo">I nostri servizi</h1>
+        <p class="col-lg-6 text-center offset-lg-3 mb-4">Realizza una cuccia personalizzata per il tuo amico a 4 zampe, con <b>Elma Pet</b> puoi: <br> 🦮 Personalizzare le misure <br> 🎨 Scegliere la fantasia <br> 🧵Scegliere tra tantissimi tessuti <br> 🐶Fare felice il tuo amico peloso</p>
         <div class="row row-cols-1 row-cols-md-3 g-4 mt-4 text-center">
           <div class="col">
             <div class="card card-teaser border-0">
               <div class="card-body icone-servizi">
                 <div class="row">
                   <div class="col-lg-3">
-                    <p class="service-icons"><i class="fa-solid fa-bone"></i></p>
+                    <p class="service-icons">🧵</p>
                   </div>
                   <div class="col-lg-9">
-                  <h5 class="card-title">Card title</h5>
-                  <p>Lorem ipsum dolor sit, amet consectetur</p>
+                  <h5 class="card-title titolo-servizi">Tessuto</h5>
+                  <p>Realizza la tua cuccia partendo dalla scelta del tessuto: scegli se usare il cotone o il velluto a seconda delle tue esigenze</p>
                   </div>
                 </div>
               </div>
@@ -130,11 +132,11 @@
               <div class="card-body icone-servizi">
                 <div class="row">
                   <div class="col-lg-3">
-                    <p class="service-icons"><i class="fa-solid fa-paw"></i></p>
+                    <p class="service-icons">🎨</p>
                   </div>
                   <div class="col-lg-9">
-                  <h5 class="card-title">Card title</h5>
-                  <p>Lorem ipsum dolor sit, amet consectetur</p>
+                  <h5 class="card-title titolo-servizi">Fantasia e colorazione</h5>
+                  <p>Scegli tra tantissime fantasie e colorazioni disponibili </p>
                   </div>
                 </div>
               </div>
@@ -145,10 +147,59 @@
               <div class="card-body icone-servizi">
                 <div class="row">
                   <div class="col-lg-3">
-                  <p class="service-icons"><i class="fa-solid fa-dog"></i></p>
+                  <p class="service-icons">🦮</i></p>
                   </div>
                   <div class="col-lg-9">
-                  <h5 class="card-title mt-2">Card title</h5>
+                  <h5 class="card-title titolo-servizi">Grandezza su misura</h5>
+                  <p>Lorem ipsum dolor sit, amet consectetur</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!--Seconda fila-->
+        <div class="row row-cols-1 row-cols-md-3 g-4 mt-4 text-center">
+          <div class="col">
+            <div class="card card-teaser border-0">
+              <div class="card-body icone-servizi">
+                <div class="row">
+                  <div class="col-lg-3">
+                    <p class="service-icons">🛋️</p>
+                  </div>
+                  <div class="col-lg-9">
+                  <h5 class="card-title titolo-servizi">Modelli</h5>
+                  <p>Realizza la tua cuccia partendo dalla scelta del tessuto: scegli se usare il cotone o il velluto a seconda delle tue esigenze</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card card-teaser border-0">
+              <div class="card-body icone-servizi">
+                <div class="row">
+                  <div class="col-lg-3">
+                    <p class="service-icons">🚚</p>
+                  </div>
+                  <div class="col-lg-9">
+                  <h5 class="card-title titolo-servizi">Spedizione a casa</h5>
+                  <p>Scegli tra tantissime fantasie e colorazioni disponibili </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card card-teaser border-0">
+              <div class="card-body icone-servizi">
+                <div class="row">
+                  <div class="col-lg-3">
+                  <p class="service-icons">👨🏼‍🎨</i></p>
+                  </div>
+                  <div class="col-lg-9">
+                  <h5 class="card-title titolo-servizi">Artigiani italiani</h5>
                   <p>Lorem ipsum dolor sit, amet consectetur</p>
                   </div>
                 </div>
@@ -160,136 +211,8 @@
     </section>
     <!--Carosello-->
     <section id="cucce">
-      <div class="row">
-        <div class="col-lg-8 offset-lg-2">
-        <h1 class="text-center titolo ">Le nostre cucce</h1>
-        <p class="text-center col-lg-6 offset-lg-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam reprehenderit similique voluptatem consequatur culpa quis vitae nobis perspiciatis eaque ducimus id modi est, molestiae enim dolores autem in quam ad!</p>
-        <!--Primo Carosello-->
-        <h2 class="text-center titolo pt-5 pb-2">Cucce con bordo</h2>
-        <div id="carouselExampleCaptions" class="carousel slide">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="images/DSCF0002 (1).jpg" class="d-block w-100 h-50" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
-                <p>Some representative placeholder content for the first slide.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="images/DSCF0002 (2).jpg" class="d-block w-100 h-50" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Some representative placeholder content for the second slide.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="images/DSCF0012.jpg" class="d-block w-100 h-50" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Some representative placeholder content for the third slide.</p>
-              </div>
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-        
-        <!--Secondo Carosello-->
-        <hr>
-        <h2 class="text-center titolo pt-5 pb-2">Cucce con bordo</h2>
-        <div id="carouselExampleCaptions" class="carousel slide">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="images/DSCF0002 (1).jpg" class="d-block w-100 h-50" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
-                <p>Some representative placeholder content for the first slide.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="images/DSCF0002 (2).jpg" class="d-block w-100 h-50" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Some representative placeholder content for the second slide.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="images/DSCF0012.jpg" class="d-block w-100 h-50" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Some representative placeholder content for the third slide.</p>
-              </div>
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-
-        <!--Terzo Carosello-->
-        <hr>
-        <h2 class="text-center titolo pt-5 pb-2">Cucce con bordo</h2>
-        <div id="carouselExampleCaptions" class="carousel slide">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="images/DSCF0002 (1).jpg" class="d-block w-100 h-50" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
-                <p>Some representative placeholder content for the first slide.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="images/DSCF0002 (2).jpg" class="d-block w-100 h-50" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Some representative placeholder content for the second slide.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="images/DSCF0012.jpg" class="d-block w-100 h-50" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Some representative placeholder content for the third slide.</p>
-              </div>
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-      </div>
-      </div>
+      <h1 class="text-center titolo">Le nostre cucce</h1>
+      <div class="col-lg-6 offset-lg-3 text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur veritatis sed sequi porro ducimus amet dolor molestiae fuga neque! Natus sunt similique ipsum. Ut magnam eius fuga commodi nam asperiores!</div>
     </section>
 </body>
 </html>
