modifica testi service icon

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 items:1
             },
             1000:{
-                items:2
+                items:3
             }
         }
         })
@@ -64,7 +64,7 @@
                 <a class="link-navbar" aria-current="page" href="#Home">Home</a>
               </li>
               <li class="nav-item">
-                <a class="link-navbar" href="#info">Informazioni</a>
+                <a class="link-navbar" href="#info">Chi siamo</a>
               </li>
               <li class="nav-item">
                 <a class="link-navbar" href="#servizi">Servizi</a>
@@ -93,7 +93,7 @@
     <!-- Sezione Info -->
     <section id="info">
       <div class="container pt-5">
-          <h1 class="text-center titolo">Informazioni</h1>
+          <h1 class="text-center titolo">Chi siamo</h1>
           <div class="row mt-4">
               <div class="col-lg-6 text-center offset-lg-3 mb-4">
                   <p class="mb-4">La morbidezza e la qualità Made In Italy incontrano il design e l’estetica con le cucce <b>Elma Pet</b>.
@@ -126,7 +126,7 @@
                     </div>
                   </div>
                   <!--Social-->
-                  <h1 class="titolo mt-5">Dai un'occhiata ai nostri social</h1>
+                  <h4 class="titolo mt-5">Dai un'occhiata ai nostri social</h4>
                   <div class="social-icons">
                       <a href="https://www.facebook.com/Elmapet14" target="_blank"><i class="fab fa-facebook"></i></a>
                       <a href="https://www.instagram.com/elmapet1/" target="_blank"><i class="fab fa-instagram"></i></a>
@@ -140,7 +140,8 @@
     <section id="servizi">
       <div class="container pt-5">
         <h1 class="text-center titolo">I nostri servizi</h1>
-        <p class="col-lg-6 text-center offset-lg-3 mb-4">Realizza una cuccia personalizzata per il tuo amico a 4 zampe, con <b>Elma Pet</b> puoi:</p>        <div class="row row-cols-1 row-cols-md-3 g-4 mt-4 text-center">
+        <p class="col-lg-6 text-center offset-lg-3 mb-4">Noi di <b>Elma Pet</b> ti aiutiamo a realizzare in soli 6 step la cuccia su misura che hai sempre sognato per il tuo amico a quattro zampe:</p>        
+        <div class="row row-cols-1 row-cols-md-3 g-4 mt-4 text-center">
           <div class="col">
             <div class="card card-teaser border-0">
               <div class="card-body icone-servizi">
@@ -149,8 +150,8 @@
                     <p class="service-icons">🧵</p>
                   </div>
                   <div class="col-lg-9">
-                  <h5 class="card-title titolo-servizi">Tessuto</h5>
-                  <p>Realizza la tua cuccia partendo dalla scelta del tessuto: scegli se usare il cotone o il velluto a seconda delle tue esigenze</p>
+                  <h5 class="card-title titolo-servizi">1. Tessuto</h5>
+                  <p>Quale tessuto vuoi utilizzare? Scegli tra Cotone o velluto a seconda delle tue esigenze</p>
                   </div>
                 </div>
               </div>
@@ -164,8 +165,8 @@
                     <p class="service-icons">🎨</p>
                   </div>
                   <div class="col-lg-9">
-                  <h5 class="card-title titolo-servizi">Fantasia e colorazione</h5>
-                  <p>Scegli tra tantissime fantasie e colorazioni disponibili </p>
+                  <h5 class="card-title titolo-servizi">2. Fantasia e colorazione</h5>
+                  <p>Non riesci a trovare una cuccia che si adatti perfettamente al design di casa? Noi di <b>Elma Pet</b> ti offriamo una consulenza per aiutarti a selezionare la colorazione più adatta </p>
                   </div>
                 </div>
               </div>
@@ -179,8 +180,8 @@
                   <p class="service-icons">🦮</i></p>
                   </div>
                   <div class="col-lg-9">
-                  <h5 class="card-title titolo-servizi">Grandezza su misura</h5>
-                  <p>Lorem ipsum dolor sit, amet consectetur</p>
+                  <h5 class="card-title titolo-servizi">3. Grandezza su misura</h5>
+                  <p>Scegli la misura perfetta per il tuo amico a quattro zampe! <b>Elma Pet</b> realizza cucce dalle dimensioni personalizzate</p>
                   </div>
                 </div>
               </div>
@@ -198,23 +199,8 @@
                     <p class="service-icons">🛋️</p>
                   </div>
                   <div class="col-lg-9">
-                  <h5 class="card-title titolo-servizi">Modelli</h5>
-                  <p>Realizza la tua cuccia partendo dalla scelta del tessuto: scegli se usare il cotone o il velluto a seconda delle tue esigenze</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card card-teaser border-0">
-              <div class="card-body icone-servizi">
-                <div class="row">
-                  <div class="col-lg-3">
-                    <p class="service-icons">🚚</p>
-                  </div>
-                  <div class="col-lg-9">
-                  <h5 class="card-title titolo-servizi">Spedizione a casa</h5>
-                  <p>Scegli tra tantissime fantasie e colorazioni disponibili </p>
+                  <h5 class="card-title titolo-servizi">4. Modelli</h5>
+                  <p>Cuscino ovale, rettangolare o divanetto? Puntiamo a dare il massimo comfort al tuo amico a quattro zampe, scegli il modello più adatto a lui</p>
                   </div>
                 </div>
               </div>
@@ -228,8 +214,23 @@
                   <p class="service-icons">👨🏼‍🎨</i></p>
                   </div>
                   <div class="col-lg-9">
-                  <h5 class="card-title titolo-servizi">Artigiani italiani</h5>
-                  <p>Lorem ipsum dolor sit, amet consectetur</p>
+                  <h5 class="card-title titolo-servizi">5. Artigiani italiani</h5>
+                  <p>Dopo aver accolto le tue richieste, i nostri artigiani daranno vita alla cuccia dei tuoi sogni</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card card-teaser border-0">
+              <div class="card-body icone-servizi">
+                <div class="row">
+                  <div class="col-lg-3">
+                    <p class="service-icons">🚚</p>
+                  </div>
+                  <div class="col-lg-9">
+                  <h5 class="card-title titolo-servizi">6. Spedizione a casa</h5>
+                  <p>Appena la cuccia sarà ultimata, la spediremo direttamente a casa tua </p>
                   </div>
                 </div>
               </div>
