carosello cuccia con bordo aggiornata

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 items:1
             },
             1000:{
-                items:3
+                items:2
             }
         }
         })
@@ -200,7 +200,7 @@
                   </div>
                   <div class="col-lg-9">
                   <h5 class="card-title titolo-servizi">4. Modelli</h5>
-                  <p>Cuscino ovale, rettangolare o divanetto? Puntiamo a dare il massimo comfort al tuo amico a quattro zampe, scegli il modello più adatto a lui</p>
+                  <p>Cuscino ovale, rettangolare o con bordo? Puntiamo a dare il massimo comfort al tuo amico a quattro zampe, scegli il modello più adatto a lui</p>
                   </div>
                 </div>
               </div>
@@ -243,23 +243,25 @@
     <section id="cucce">
       <div class="container pt-5">
         <h1 class="text-center titolo">Le nostre cucce</h1>
-        <div class="col-lg-6 offset-lg-3 text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur veritatis sed sequi porro ducimus amet dolor molestiae fuga neque! Natus sunt similique ipsum. Ut magnam eius fuga commodi nam asperiores!</div>
+        <div class="col-lg-6 offset-lg-3 text-center">Esplora la nostra collezione e scopri tre modelli unici, ciascuno progettato con cura e realizzato con materiali di prima scelta per garantire al tuo amico a quattro zampe un rifugio di lusso su misura. Comfort, stile e qualità si uniscono per offrirti tre opzioni perfette alle quali puoi ispirarti per realizzare la tua cuccia personalizzata!</div>
           <!--Primo-->
           
           <div class="container mt-5">
-            <h4 class="titolo text-center mb-4">Cucce Rotonde</h4>
+            <h4 class="titolo text-center mb-4">Cucce con bordo</h4>
             <div class="owl-carousel owl-theme">
-            <div class="item"><img class="immagineCarosello" src="images/DSCF0002 (1).jpg" alt=""></div>
-            <div class="item"><img class="immagineCarosello" src="images/DSCF0003 (1).jpg" alt=""></div>
-            <div class="item"><img class="immagineCarosello" src="images/DSCF0012.jpg" alt=""></div>
-            <div class="item"><img class="immagineCarosello" src="images/DSCF0064.jpg" alt=""></div>
-            <div class="item"><img class="immagineCarosello" src="images/soc.jpg" alt=""></div>
+            <div class="item"><img class="immagineCarosello" src="images/foto cucce/cuccia con bordo.jpg" alt=""></div>
+            <div class="item"><img class="immagineCarosello" src="images/foto cucce/cuccia con bordo1.jpg" alt=""></div>
+            <div class="item"><img class="immagineCarosello" src="images/foto cucce/cuccia con bordo2.jpg" alt=""></div>
+            <div class="item"><img class="immagineCarosello" src="images/foto cucce/cuccia con bordo3.jpg" alt=""></div>
+            <div class="item"><img class="immagineCarosello" src="images/foto cucce/cuccia con bordo4.jpg" alt=""></div>
+            <div class="item"><img class="immagineCarosello" src="images/foto cucce/cuccia con bordo5.jpg" alt=""></div>
+            <div class="item"><img class="immagineCarosello" src="images/foto cucce/cuccia con bordo6.jpg" alt=""></div>
           </div>
 
           <!--Secondo-->
           <hr>
           <div class="container mt-5">
-            <h4 class="titolo text-center mb-4">Cucce Rettangolari</h4>
+            <h4 class="titolo text-center mb-4">Cuscini ovali</h4>
             <div class="owl-carousel owl-theme">
             <div class="item"><img class="immagineCarosello" src="images/DSCF0002 (1).jpg" alt=""></div>
             <div class="item"><img class="immagineCarosello" src="images/DSCF0003 (1).jpg" alt=""></div>
@@ -271,7 +273,7 @@
           <!--Terzo-->
           <hr>
           <div class="container mt-5">
-            <h4 class="titolo text-center mb-4">Cucce Rotonde</h4>
+            <h4 class="titolo text-center mb-4">Cuscini Rettangolari</h4>
             <div class="owl-carousel owl-theme">
             <div class="item"><img class="immagineCarosello" src="images/DSCF0002 (1).jpg" alt=""></div>
             <div class="item"><img class="immagineCarosello" src="images/DSCF0003 (1).jpg" alt=""></div>
@@ -287,15 +289,15 @@
     <section id="contatti">
       <div class="container mt-3 text-center">
           <h1 class="text-center titolo mt-5">Contattaci</h1>
-          <p class="col-lg-6 text-center offset-lg-3 mb-4">Hai due modi per metterti in contatto con noi, puoi compilare questo <b><a class="questionario" href="#">questionario</a></b> rispondendo alle domande standard che noi facciamo, oppure puoi compilare il form qui sotto, in entrambi i casi ti ricontatteremo costruendo insieme a te la cuccia perfetta per il tuo amico a 4 zampe!</p>
+          <p class="col-lg-6 text-center offset-lg-3 mb-4">Hai due modi per metterti in contatto con noi, puoi compilare questo <b><a class="questionario" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSfnGlwGabcD5zdkaNXdDjDp0ZzxsBG87CIHF2qW3gy6-kaFoA/viewform?usp=sf_link">questionario</a></b> rispondendo alle nostre domande, oppure puoi compilare il form qui sotto, in entrambi i casi ti ricontatteremo per costruire insieme a te la cuccia perfetta per il tuo amico a 4 zampe!</p>
           <div class="row mt-4">
               <div class="col-lg-6 offset-lg-3">
                   <!-- Form -->
-                  <form action="https://formspree.io/f/mayggvde" method="post">
+                  <form action="https://formspree.io/f/mqkrakoj" method="post">
                       <input type="text" name="name" class="form-control form-control-lg" placeholder="Nome" required>
                       <input type="email" name="email" class="form-control form-control-lg mt-3" placeholder="Email" required>
                       <div class="mb-3 mt-3">
-                          <textarea class="form-control" name="message" rows="5" id="comment" name="text" placeholder="Scrivici qui" required></textarea>
+                          <textarea class="form-control" name="message" rows="5" id="comment" name="text" placeholder="Descrivi le caratteristiche della cuccia personalizzata che vorresti realizzare insieme ad Elma Pet..." required></textarea>
                       </div>
                       <button type="submit" class="invia mt-3">Invia</button>
                   </form>     
@@ -314,7 +316,7 @@
               <a href="https://github.com/Simone55592" target="_blank"><i class="foot fab fa-github"></i></a>
           </div>
       </div>
-      <div class="copyright">Copyright © 2023 Elma Pet . All rights reserved. Design By <a href="index.html" class="footer-link">Simone Adamo</a> Images<a href="index.html" class="footer-link"> Elma Pet</a> Icons <a href="https://fontawesome.com/" class="footer-link">Font Awesome</a></div>
+      <div class="copyright">Copyright © 2023 Elma Pet . All rights reserved. Design By <a target="_blank" href="https://simone55592.github.io/portfolio/" class="footer-link">Simone Adamo</a> Images<a href="index.html" class="footer-link"> Elma Pet</a> Icons <a href="https://fontawesome.com/" class="footer-link">Font Awesome</a></div>
     </footer>
 
 </body>
