--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elmapet</title>
+    <!--Favicon-->
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <!--Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,7 +14,12 @@
     <link rel="stylesheet" href="slider/risorse/owl.carousel.min.css">
     <link rel="stylesheet" href="slider/risorse/owl.theme.default.min.css">
     <!--Tag OG-->
-
+    <meta property="og:locale" content="it">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://simone55592.github.io/Elmapet/">
+    <meta property="og:title" content="Elma Pet">
+    <meta property="og:description" content="Rivenditore di cucce personalizzate">
+    <meta property="og:image" content="https://github.com/Simone55592/Elmapet/blob/main/images/hero1.jpg?raw=true">
     <!-- link css -->
     <link rel="stylesheet" href="style.css">
     <!-- link bootstrap -->
