--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     </script>
 </head>
-<body class="body">
+<body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg fixed-top navbar-light">
         <div class="container">
