--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:url" content="https://simone55592.github.io/Elmapet/">
     <meta property="og:title" content="Elma Pet">
     <meta property="og:description" content="Rivenditore di cucce personalizzate">
-    <meta property="og:image" content="images/hero1.jpg">
+    <meta property="og:image" content="https://github.com/Simone55592/Elmapet/blob/main/images/hero1.jpg">
     <!-- link css -->
     <link rel="stylesheet" href="style.css">
     <!-- link bootstrap -->
