fix scritta hero title responsive

--- a/index.html
+++ b/index.html
@@ -92,8 +92,11 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero_text">
                     <h2 class="hero_title titolo">Elma Pet</h2>
-                    <p class="hero_sub">Cucce per cani e gatti <br> Made in Italy</p>
                 </div>
+                  <div class="hero_text_sub">
+                    <p class="hero_sub">Cucce per cani e gatti <br> Made in Italy</p>
+                  </div>
+                
             </div>
         </div>
         <a target="_blank" href="https://wa.me/+393513564048?text=Ciao Elma Pet, sono interessato alla realizzazione di una cuccia su misura. Le caratteristiche che la cuccia deve avere sono " class="wa-btn">
