implementato foto carosello

--- a/index.html
+++ b/index.html
@@ -270,6 +270,8 @@
             <div class="item"><img class="immagineCarosello" src="images/foto cucce/cuccia con bordo4.jpg" alt=""></div>
             <div class="item"><img class="immagineCarosello" src="images/foto cucce/cuccia con bordo5.jpg" alt=""></div>
             <div class="item"><img class="immagineCarosello" src="images/foto cucce/cuccia con bordo6.jpg" alt=""></div>
+            <div class="item"><img class="immagineCarosello" src="images/foto cucce/cuccia con bordo7.jpeg" alt=""></div>
+            <div class="item"><img class="immagineCarosello" src="images/foto cucce/cuccia con bordo8.jpeg" alt=""></div>
           </div>
 
           <!--Secondo-->
@@ -277,11 +279,11 @@
           <div class="container mt-5">
             <h4 class="titolo text-center mb-4">Cuscini ovali</h4>
             <div class="owl-carousel owl-theme">
-            <div class="item"><img class="immagineCarosello" src="images/DSCF0002 (1).jpg" alt=""></div>
-            <div class="item"><img class="immagineCarosello" src="images/DSCF0003 (1).jpg" alt=""></div>
-            <div class="item"><img class="immagineCarosello" src="images/DSCF0012.jpg" alt=""></div>
-            <div class="item"><img class="immagineCarosello" src="images/DSCF0064.jpg" alt=""></div>
-            <div class="item"><img class="immagineCarosello" src="images/soc.jpg" alt=""></div>
+            <div class="item"><img class="immagineCarosello" src="images/foto cucce/ovale.jpg" alt=""></div>
+            <div class="item"><img class="immagineCarosello" src="images/foto cucce/ovale1.jpg" alt=""></div>
+            <div class="item"><img class="immagineCarosello" src="images/foto cucce/ovale2.jpg" alt=""></div>
+            <div class="item"><img class="immagineCarosello" src="images/foto cucce/ovale3.jpg" alt=""></div>
+            <div class="item"><img class="immagineCarosello" src="images/foto cucce/ovale4.jpg" alt=""></div>
           </div>
 
           <!--Terzo-->
@@ -289,11 +291,10 @@
           <div class="container mt-5">
             <h4 class="titolo text-center mb-4">Cuscini Rettangolari</h4>
             <div class="owl-carousel owl-theme">
-            <div class="item"><img class="immagineCarosello" src="images/DSCF0002 (1).jpg" alt=""></div>
-            <div class="item"><img class="immagineCarosello" src="images/DSCF0003 (1).jpg" alt=""></div>
-            <div class="item"><img class="immagineCarosello" src="images/DSCF0012.jpg" alt=""></div>
-            <div class="item"><img class="immagineCarosello" src="images/DSCF0064.jpg" alt=""></div>
-            <div class="item"><img class="immagineCarosello" src="images/soc.jpg" alt=""></div>
+            <div class="item"><img class="immagineCarosello" src="images/foto cucce/cuscino rettan.jpg" alt=""></div>
+            <div class="item"><img class="immagineCarosello" src="images/foto cucce/cuscino rettan1.jpg" alt=""></div>
+            <div class="item"><img class="immagineCarosello" src="images/foto cucce/cuscino rettan2.jpg" alt=""></div>
+            <div class="item"><img class="immagineCarosello" src="images/foto cucce/cuscino rettan3.jpg" alt=""></div>
           </div>
         </div>
       </div>
